Tell file.rename to wait for the rename to be complete before it returns.  This might fix the install.packages() problems reported on R-devel by Georgi Boshnakov and Mike Prager.
git-svn-id: https://svn.r-project.org/R/trunk@51980 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -85,6 +85,13 @@ PACKAGE INSTALLATION
     o	Package installation, including 'configure.win' scripts, can
 	use ${R_HOME}/bin${R_ARCH_BIN} as a portable way to find
 	the binaries such as Rscript.exe.
+	
+
+BUG FIXES
+
+    o	file.rename() now waits for the rename to complete before 
+    	returning, so that operations on the new filename will not fail.
+
 
 
 
