simply 64-bit-only installer
git-svn-id: https://svn.r-project.org/R/trunk@51981 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1230,7 +1230,7 @@ where @file{rootdir} is the path to the root of the customized
 installation (forward slashes and no spaces, please).  
 
 Both methods create an executable with a standard name such as
-@file{@value{RWVERSION}-win32.exe}, so please rename it to indicate that
+@file{@value{RWVERSION}-win.exe}, so please rename it to indicate that
 it is customized.  If you intend to @emph{distribute} a customized
 installer please do check that license requirements are met -- note that
 the installer will state that the contents are distributed under GPL-2
@@ -1263,10 +1263,6 @@ in file @file{MkRules.local} to the top-level directory of the 32-bit
 build.  Then the @command{make rinstaller} step copies the files that
 differ between architectures from the 32-bit build as it builds the
 installer image.
-
-The scripts will name a combined 32/64-bit installer
-@file{@value{RWVERSION}-win.exe}, but use @file{-win32.exe} or
-@file{-win64.exe} for one containing a single architecture.
 
 @node Building the MSI installer, Cross-building on Linux, Building the Inno Setup installer, Building from source
 @subsection Building the MSI installer
