set up src/gnuwin32/crandir only from 64-bit builds
git-svn-id: https://svn.r-project.org/R/trunk@51982 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1197,7 +1197,7 @@ vignettes @r{(the vignettes in package @strong{grid}:}
 	  @r{ only needed if building from an svn checkout)}
 manuals @r{(the PDF manuals)}
 rinstaller @r{(the install program)}
-crandir @r{(the @acronym{CRAN} distribution directory)}
+crandir @r{(the @acronym{CRAN} distribution directory, only for 64-bit builds)}
 @end example
 
 The parts can be made individually if a full build is not needed, but
