avoid overflow in an extreme case
git-svn-id: https://svn.r-project.org/R/trunk@51989 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -275,6 +275,9 @@ BUG FIXES
     o	rbeta(n, a,b) no longer occasionally returns NaN for a >> 1 > b.
 	(PR#14291)
 
+    o	pnorm(x, log.p = TRUE) could return NaN not -Inf for x near
+	(minus for lower.tail=TRUE) the largest representable number.
+
 
 
 		CHANGES IN R VERSION 2.11.0
