--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1755,6 +1755,10 @@ FFLAGS=-g -O
 FCFLAGS=-g -O
 @end example
 
+As from @R{} 2.12.0 there is also provision for a site-wide
+@file{Makevars.site} file under @file{@var{R_HOME}/etc} (in a
+sub-architecture-specific directory if appropriate).  This is read
+immediately after @file{Makeconf}.
 
 @node Multiple sub-architectures,  , Customizing package compilation, Installing packages
 @subsection Multiple sub-architectures
