add platform info to startup
git-svn-id: https://svn.r-project.org/R/trunk@51999 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -99,6 +99,10 @@ NEW FEATURES
 	class "summaryDefault" which has a separate print() method
 	that calls zapsmall() for numeric/complex values.
 
+    o	The startup message now includes the platform and if used,
+	sub-architecture: this is useful where different
+	(sub-)architectures run on the same OS.
+
 
 DEPRECATED & DEFUNCT
 
