port r52001 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52002 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -85,6 +85,11 @@ BUG FIXES
     o	pnorm(x, log.p = TRUE) could return NaN not -Inf for x near
 	(minus for lower.tail=TRUE) the largest representable number.
 
+    o	Compressed ata files *.(txt|tab|csv).(gz|bz2|xz) were not
+	recognized for the list of data topics and hence for packages
+	using LazyData.  (PR#14273)
+
+
 
 
 		CHANGES IN R VERSION 2.11.0
