--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -3817,8 +3817,7 @@ suggests that @option{-pc64} may be desirable.
 @node Sun Studio compilers,  , PGI compilers, Linux
 @subsection Sun Studio compilers
 
-Brian Ripley tested the Sun Studio 12 (aka Sun Ceres, formerly Sun
-Forte) compilers
+Brian Ripley tested the Sun Studio 12 compilers
 (@uref{http://developers.sun.com/@/sunstudio/@/index.jsp}) on
 @cputype{x86_64} Linux with
 
@@ -3954,13 +3953,13 @@ in the default linking path, so something like
 @cindex Solaris
 
 @R{} has been built successfully on Solaris 10 (both Sparc and
-@cputype{x86}) using the (zero cost) Sun Studio (aka Ceres) 12
-compilers: there has been some success with
-@command{gcc}@tie{}4/@command{gfortran}, mainly on Sparc.  Sun packages
-for @R{} used to be available from @uref{http://www.sunfreeware.com/}
-for both architectures, but have not been updated recently.  (Recent Sun
-machines are Opterons (@cputype{amd64}) rather than @cputype{x86}, but
-32-bit @cputype{x86} executables are the default.)
+@cputype{x86}) using the (zero cost) Sun Studio 12 compilers: there has
+been some success with @command{gcc}@tie{}4/@command{gfortran}, mainly
+on Sparc.  Sun packages for @R{} used to be available from
+@uref{http://www.sunfreeware.com/} for both architectures, but have not
+been updated recently.  (Recent Sun machines are Opterons
+(@cputype{amd64}) rather than @cputype{x86}, but 32-bit @cputype{x86}
+executables are the default.)
 
 There are also reports of success on OpenSolaris (also known as Solaris
 Express Community Edition, and sometimes as Solaris 11) on
@@ -4046,7 +4045,7 @@ CXXFLAGS="-O5 -xlibmil -nofstore -xtarget=native"
 SAFE_FFLAGS="-libmil -fstore -xtarget=native"
 @end example
 
-The SunStudio compilers provide several implementations of the C++
+The Sun Studio compilers provide several implementations of the C++
 standard which select both the set of headers and a C++ runtime library.
 These are selected by the @option{-library} flag, which as it is needed
 for both compiling and linking is best specified as part of the
