BIC(fm1, fm2) now works as IAC() did for a long time
git-svn-id: https://svn.r-project.org/R/trunk@52027 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -215,6 +215,9 @@ NEW FEATURES
     o	R CMD INSTALL --build now names the file in the format used
 	for Mac OS X binary files on that platform.
 
+    o	BIC() in package stats4 now also works with multiple fitted models,
+	analogously to AIC().
+
 
 DEPRECATED & DEFUNCT
 
