do not use conditional inheritance in method selection
git-svn-id: https://svn.r-project.org/R/trunk@52029 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -193,6 +193,9 @@ BUG FIXES
         another class now accept superclass objects in new(). Also
         fixes failure to call validObject() for these classes.
 
+    o	Conditional inheritance defined by argument test= in setIs()
+        will no longer be used in method selection (caching these
+        methods could give incorrect results).  See ?setIs.
 
 
 
