Port r52040 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52041 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -102,6 +102,9 @@ BUG FIXES
 	a foreign encoding (e.g. UTF-8 strings on Windows) and so was
 	slower than it could have been on very long input strings.
 	(PR#14286)
+	
+    o	tools::Rd2txt() did not render poorly written Rd files consistently
+	with other renderers.
 
 
 
