--- a/NEWS
+++ b/NEWS
@@ -214,7 +214,7 @@ BUG FIXES
 	**************************************************
 
 
-		CHANGES IN R VERSION 2.11.0 patched
+		CHANGES IN R VERSION 2.11.1
 
 
 NEW FEATURES
