extend scope of con->UTF8out
git-svn-id: https://svn.r-project.org/R/trunk@52062 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -106,6 +106,10 @@ NEW FEATURES
     o	tools::texi2dvi() gains an 'index' argument, mainly for use by
 	R CMD Rd2pdf.
 
+    o	The ability of readLines() and scan() to re-encode inputs to
+	marked UTF-8 strings on Windows since R 2.7.0 is extended to
+	non-UTF-8 locales on other OSes.
+
 
 DEPRECATED & DEFUNCT
 
