add scan(fileEncoding=), tweaks to docs
git-svn-id: https://svn.r-project.org/R/trunk@52064 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-data.texi
+++ b/doc/manual/R-data.texi
@@ -404,11 +404,11 @@ in the correct encoding.  This is mainly an issue for reading Latin-1
 files in a UTF-8 locale, which can be done by something like
 
 @example
-read.table(file("file.dat", encoding="latin1"))
+read.table("file.dat", fileEncoding="latin1")
 @end example
 
 @noindent
-Note that this will work in any locale which can represent Latin-1 names.
+Note that this will work in any locale which can represent Latin-1 strings.
 
 
 @item @strong{Header line}
