--- a/NEWS
+++ b/NEWS
@@ -110,6 +110,8 @@ NEW FEATURES
 	marked UTF-8 strings on Windows since R 2.7.0 is extended to
 	non-UTF-8 locales on other OSes.
 
+    o	scan() gains a 'fileEncoding' argument to match read.table().
+
 
 DEPRECATED & DEFUNCT
 
