add points/lines/Axis methods for "table" (PR#10472)
git-svn-id: https://svn.r-project.org/R/trunk@52069 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -112,6 +112,9 @@ NEW FEATURES
 
     o	scan() gains a 'fileEncoding' argument to match read.table().
 
+    o	points() and lines() gain "table" methods to match plot().
+	(Wish of PR#10472.)
+
 
 DEPRECATED & DEFUNCT
 
