Allow errors (e.g. settings from newer versions) in Rconsole file.
git-svn-id: https://svn.r-project.org/R/trunk@52072 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -103,7 +103,7 @@ BUG FIXES
 	**************************************************
 
 
-    		CHANGES IN R VERSION 2.11.0 patched
+    		CHANGES IN R VERSION 2.11.1
 
 
 NEW FEATURES
@@ -119,6 +119,9 @@ NEW FEATURES
 	(there were in most previous releases, but not in 2.11.0).
 
     o	R CMD INSTALL can install zipfiles as binary packages.
+    
+    o	Errors in the Rconsole file are ignored:  silently on startup, 
+    	with a warning when Rconsole is loaded interactively.
 
 
 
